fix: image overflow

--- a/styles/pictures.css
+++ b/styles/pictures.css
@@ -27,7 +27,7 @@
 
             img {
                 border-radius: 25px;
-                height: 100%;
+               
                 width: 100%;
             }
         }
